@@ -1,5 +1,5 @@
 // This code conforms with the UFC specification version 1.0
-// and was automatically generated by FFC version 0.4.3.
+// and was automatically generated by FFC version 0.4.4.
 //
 // Warning: This code was generated with the option '-l dolfin'
 // and contains DOLFIN-specific wrappers that depend on DOLFIN.
@@ -820,7 +820,7 @@ public:
     const double G1_5_1_5_1 = det*c0_1_0_5*c0_1_1_5*(Jinv_10*Jinv_10 + Jinv_11*Jinv_11);
     
     // Compute element tensor
-    A[0] = 0.0166666666666667*G0_0_0 - 0.00277777777777777*G0_0_1 - 0.00277777777777778*G0_0_2 - 0.0111111111111111*G0_0_3 - 0.00277777777777777*G0_1_0 + 0.0166666666666667*G0_1_1 - 0.00277777777777778*G0_1_2 - 0.0111111111111111*G0_1_4 - 0.00277777777777778*G0_2_0 - 0.00277777777777777*G0_2_1 + 0.0166666666666666*G0_2_2 - 0.0111111111111111*G0_2_5 - 0.0111111111111111*G0_3_0 + 0.0888888888888888*G0_3_3 + 0.0444444444444444*G0_3_4 + 0.0444444444444444*G0_3_5 - 0.0111111111111111*G0_4_1 + 0.0444444444444444*G0_4_3 + 0.0888888888888889*G0_4_4 + 0.0444444444444444*G0_4_5 - 0.0111111111111111*G0_5_2 + 0.0444444444444444*G0_5_3 + 0.0444444444444444*G0_5_4 + 0.0888888888888888*G0_5_5 + 0.499999999999999*G1_0_0_0_0 + 0.499999999999999*G1_0_0_0_1 + 0.166666666666666*G1_0_0_1_0 + 0.166666666666666*G1_0_0_2_1 - 0.666666666666666*G1_0_0_4_1 - 0.666666666666665*G1_0_0_5_0 + 0.499999999999999*G1_0_1_0_0 + 0.499999999999999*G1_0_1_0_1 + 0.166666666666666*G1_0_1_1_0 + 0.166666666666667*G1_0_1_2_1 - 0.666666666666666*G1_0_1_4_1 - 0.666666666666666*G1_0_1_5_0 + 0.166666666666666*G1_1_0_0_0 + 0.166666666666666*G1_1_0_0_1 + 0.499999999999999*G1_1_0_1_0 - 0.166666666666666*G1_1_0_2_1 + 0.666666666666665*G1_1_0_3_1 - 0.666666666666665*G1_1_0_5_0 - 0.666666666666665*G1_1_0_5_1 + 0.166666666666666*G1_2_1_0_0 + 0.166666666666667*G1_2_1_0_1 - 0.166666666666666*G1_2_1_1_0 + 0.499999999999999*G1_2_1_2_1 + 0.666666666666665*G1_2_1_3_0 - 0.666666666666665*G1_2_1_4_0 - 0.666666666666666*G1_2_1_4_1 + 0.666666666666665*G1_3_0_2_1 + 1.33333333333333*G1_3_0_3_0 + 0.666666666666665*G1_3_0_3_1 - 1.33333333333333*G1_3_0_4_0 - 0.666666666666665*G1_3_0_4_1 - 0.666666666666665*G1_3_0_5_1 + 0.666666666666665*G1_3_1_1_0 + 0.666666666666665*G1_3_1_3_0 + 1.33333333333333*G1_3_1_3_1 - 0.666666666666665*G1_3_1_4_0 - 0.666666666666665*G1_3_1_5_0 - 1.33333333333333*G1_3_1_5_1 - 0.666666666666665*G1_4_0_2_1 - 1.33333333333333*G1_4_0_3_0 - 0.666666666666665*G1_4_0_3_1 + 1.33333333333333*G1_4_0_4_0 + 0.666666666666665*G1_4_0_4_1 + 0.666666666666665*G1_4_0_5_1 - 0.666666666666666*G1_4_1_0_0 - 0.666666666666666*G1_4_1_0_1 - 0.666666666666665*G1_4_1_2_1 - 0.666666666666665*G1_4_1_3_0 + 0.666666666666665*G1_4_1_4_0 + 1.33333333333333*G1_4_1_4_1 + 0.666666666666666*G1_4_1_5_0 - 0.666666666666666*G1_5_0_0_0 - 0.666666666666666*G1_5_0_0_1 - 0.666666666666665*G1_5_0_1_0 - 0.666666666666665*G1_5_0_3_1 + 0.666666666666666*G1_5_0_4_1 + 1.33333333333333*G1_5_0_5_0 + 0.666666666666666*G1_5_0_5_1 - 0.666666666666665*G1_5_1_1_0 - 0.666666666666665*G1_5_1_3_0 - 1.33333333333333*G1_5_1_3_1 + 0.666666666666666*G1_5_1_4_0 + 0.666666666666666*G1_5_1_5_0 + 1.33333333333333*G1_5_1_5_1;
+    A[0] = 0.0166666666666667*G0_0_0 - 0.00277777777777777*G0_0_1 - 0.00277777777777778*G0_0_2 - 0.0111111111111111*G0_0_3 - 0.00277777777777777*G0_1_0 + 0.0166666666666667*G0_1_1 - 0.00277777777777777*G0_1_2 - 0.0111111111111111*G0_1_4 - 0.00277777777777778*G0_2_0 - 0.00277777777777777*G0_2_1 + 0.0166666666666666*G0_2_2 - 0.0111111111111111*G0_2_5 - 0.0111111111111111*G0_3_0 + 0.0888888888888888*G0_3_3 + 0.0444444444444444*G0_3_4 + 0.0444444444444444*G0_3_5 - 0.0111111111111111*G0_4_1 + 0.0444444444444444*G0_4_3 + 0.0888888888888889*G0_4_4 + 0.0444444444444444*G0_4_5 - 0.0111111111111111*G0_5_2 + 0.0444444444444444*G0_5_3 + 0.0444444444444444*G0_5_4 + 0.0888888888888888*G0_5_5 + 0.499999999999999*G1_0_0_0_0 + 0.499999999999999*G1_0_0_0_1 + 0.166666666666666*G1_0_0_1_0 + 0.166666666666667*G1_0_0_2_1 - 0.666666666666666*G1_0_0_4_1 - 0.666666666666666*G1_0_0_5_0 + 0.499999999999999*G1_0_1_0_0 + 0.499999999999999*G1_0_1_0_1 + 0.166666666666666*G1_0_1_1_0 + 0.166666666666666*G1_0_1_2_1 - 0.666666666666666*G1_0_1_4_1 - 0.666666666666666*G1_0_1_5_0 + 0.166666666666666*G1_1_0_0_0 + 0.166666666666666*G1_1_0_0_1 + 0.499999999999999*G1_1_0_1_0 - 0.166666666666666*G1_1_0_2_1 + 0.666666666666665*G1_1_0_3_1 - 0.666666666666665*G1_1_0_5_0 - 0.666666666666666*G1_1_0_5_1 + 0.166666666666667*G1_2_1_0_0 + 0.166666666666666*G1_2_1_0_1 - 0.166666666666666*G1_2_1_1_0 + 0.499999999999999*G1_2_1_2_1 + 0.666666666666665*G1_2_1_3_0 - 0.666666666666665*G1_2_1_4_0 - 0.666666666666666*G1_2_1_4_1 + 0.666666666666665*G1_3_0_2_1 + 1.33333333333333*G1_3_0_3_0 + 0.666666666666665*G1_3_0_3_1 - 1.33333333333333*G1_3_0_4_0 - 0.666666666666665*G1_3_0_4_1 - 0.666666666666665*G1_3_0_5_1 + 0.666666666666665*G1_3_1_1_0 + 0.666666666666665*G1_3_1_3_0 + 1.33333333333333*G1_3_1_3_1 - 0.666666666666665*G1_3_1_4_0 - 0.666666666666665*G1_3_1_5_0 - 1.33333333333333*G1_3_1_5_1 - 0.666666666666665*G1_4_0_2_1 - 1.33333333333333*G1_4_0_3_0 - 0.666666666666665*G1_4_0_3_1 + 1.33333333333333*G1_4_0_4_0 + 0.666666666666665*G1_4_0_4_1 + 0.666666666666666*G1_4_0_5_1 - 0.666666666666666*G1_4_1_0_0 - 0.666666666666666*G1_4_1_0_1 - 0.666666666666666*G1_4_1_2_1 - 0.666666666666666*G1_4_1_3_0 + 0.666666666666665*G1_4_1_4_0 + 1.33333333333333*G1_4_1_4_1 + 0.666666666666666*G1_4_1_5_0 - 0.666666666666666*G1_5_0_0_0 - 0.666666666666666*G1_5_0_0_1 - 0.666666666666665*G1_5_0_1_0 - 0.666666666666665*G1_5_0_3_1 + 0.666666666666666*G1_5_0_4_1 + 1.33333333333333*G1_5_0_5_0 + 0.666666666666666*G1_5_0_5_1 - 0.666666666666666*G1_5_1_1_0 - 0.666666666666665*G1_5_1_3_0 - 1.33333333333333*G1_5_1_3_1 + 0.666666666666665*G1_5_1_4_0 + 0.666666666666666*G1_5_1_5_0 + 1.33333333333333*G1_5_1_5_1;
   }
 
 };
